feat : 자판기 UI > 배출구 추가

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
               카드 결제하기
             </button>
           </div>
+
+          <div class="dispenser-slot">
+            <div class="slot-door"></div>
+            <div class="dispensed-items" id="dispensedItems"></div>
+          </div>
         </div>
       </div>
 
